# py-rust-stemmers-tuned

./: .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: publish.yaml
src/: lib.rs
tests/: speedtest.py  test_cache_performance.py  test_py_rust_stemmers.py
