[project]
name = "py_rust_stemmers_tuned"
version = "0.1.8"
description = "Fast and parallel snowball stemmer"

# Include a long description
readme = "README.md"
requires-python = ">=3.14"

[build-system]
requires = ["maturin>=0.12"]
build-backend = "maturin"

[dependency-groups]
dev = [
    "maturin>=1.10.1",
]


# Other fields like authors, dependencies, etc.
